# internal/app/entity/organization.go
@@ -5,14 +5,20 @@ import (
 )
 
 type (
+	ServicePrices struct {
+		Bonus int64
+		Sbp   int64
+	}
+
 	Organization struct {
-		ID          uuid.UUID
-		Name        string
-		DisplayName string
-		Description string
-		Version     int64
-		Balance     int64
-		Deleted     bool
+		ID            uuid.UUID
+		Name          string
+		DisplayName   string
+		Description   string
+		Version       int64
+		Balance       int64
+		Deleted       bool
+		ServicePrices ServicePrices
 	}
 
 	OrganizationUpdate struct {
